Added dashboard and project form

--- a/client/index.html
+++ b/client/index.html
@@ -73,6 +73,10 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/dashboard/main/dashboard.controller.js"></script>
+          <script src="app/dashboard/main/dashboard.js"></script>
+          <script src="app/dashboard/newproject/newproject.controller.js"></script>
+          <script src="app/dashboard/newproject/newproject.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="components/auth/auth.service.js"></script>
