--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -2,8 +2,8 @@
 
 <header class="hero-unit" id="banner">
   <div class="container">
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">Kick-start your next web app with Angular Fullstack</p>
+    <h1>Miles Project Dashboard</h1>
+    <p class="lead">The Miles Technologies Web Team's Project Console</p>
     <img src="assets/images/yeoman.png" alt="I'm Yeoman">
   </div>
 </header>
@@ -18,6 +18,7 @@
     </div>
   </div>
 
+
   <form class="thing-form">
     <label>Syncs in realtime across clients</label>
     <p class="input-group">
@@ -28,6 +29,8 @@
     </p>
   </form>
 </div>
+
+
 
 <footer class="footer">
   <div class="container">
