--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -4,12 +4,12 @@
   <div class="container">
     <h1>Miles Project Dashboard</h1>
     <p class="lead">The Miles Technologies Web Team's Project Console</p>
-    <img src="assets/images/yeoman.png" alt="I'm Yeoman">
+    <img src="assets/images/M-icon.png" alt="I'm Yeoman">
   </div>
 </header>
 
 <div class="container">
-  <div class="row">
+  <!--<div class="row">
     <div class="col-lg-12">
       <h1 class="page-header">Features:</h1>
       <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in awesomeThings">
@@ -27,15 +27,14 @@
         <button type="submit" class="btn btn-primary" ng-click="addThing()">Add New</button>
       </span>
     </p>
-  </form>
+  </form>-->
 </div>
 
 
 
 <footer class="footer">
   <div class="container">
-      <p>Angular Fullstack v2.0.13 |
-        <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
-         <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a></p>
+      <p>Miles Technologies Project Dashboard |
+        <a href="https://twitter.com/joezeoli">@joezeoli</a></p>
   </div>
 </footer>
