Remove project from option setting after add

--- a/client/app/account/settings/settings.html
+++ b/client/app/account/settings/settings.html
@@ -40,6 +40,7 @@
   </div>
 
       <div class="col-sm-6">
+          <label>Add Projects</label>
           <select ng-model="projectList"  ng-options="project as project.name for project in projects" >
 
           </select>
