Added some functionality to the projects and added a project dashboard screen.

--- a/client/index.html
+++ b/client/index.html
@@ -77,6 +77,8 @@
           <script src="app/dashboard/main/dashboard.js"></script>
           <script src="app/dashboard/newproject/newproject.controller.js"></script>
           <script src="app/dashboard/newproject/newproject.js"></script>
+          <script src="app/dashboard/project/project.controller.js"></script>
+          <script src="app/dashboard/project/project.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="components/auth/auth.service.js"></script>
