--- a/client/app/dashboard/main/dashboard.html
+++ b/client/app/dashboard/main/dashboard.html
@@ -1,11 +1,12 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
 <div class="container">
+<div class="col-lg-3">
+<div ng-include="'components/project-list/project-list.html'"></div>
+</div>
+
+<div class="col-lg-9">
   <h1>This Is the Dashboard</h1>
-
-    <ul>
-    <li ng-repeat="project in projects">{{project.name}}</li>
-
-    </ul>
+</div>
 
 </div>
