--- a/client/app/dashboard/newproject/newproject.html
+++ b/client/app/dashboard/newproject/newproject.html
@@ -15,6 +15,16 @@
             A name is required
           </p>
         </div>
+         <div class="form-group" ng-class="{ 'has-success': form.name.$valid && submitted,
+                                            'has-error': form.name.$invalid && submitted }">
+          <label>Date Mockup Is Due:</label>
+
+          <input type="date" name="mockupduedate" class="form-control" ng-model="project.mockupduedate"
+                 required/>
+          <p class="help-block" ng-show="form.name.$error.required && submitted">
+            A date is required
+          </p>
+        </div>
 
         <div class="form-group" ng-class="{ 'has-success': form.info.$valid && submitted,
                                             'has-error': form.info.$invalid && submitted }">
@@ -23,6 +33,33 @@
 
             <textarea name="info" class="form-control" ng-model="project.info" required></textarea>
         </div>
+
+
+<div>
+
+
+
+
+<!--
+  <!-- Nav tabs --
+  <ul class="nav nav-tabs" role="tablist">
+    <li role="presentation" class="active"><a aria-controls="home" role="tab" data-toggle="tab" ng-click="switchTabs('home')">Home</a></li>
+    <li role="presentation"><a  aria-controls="profile" role="tab" data-toggle="tab" ng-click="switchTabs('profile')">Profile</a></li>
+    <li role="presentation"><a  aria-controls="messages" role="tab" data-toggle="tab" ng-click="switchTabs('messages')">Messages</a></li>
+    <li role="presentation"><a  aria-controls="settings" role="tab" data-toggle="tab" ng-click="switchTabs('settings')">Settings</a></li>
+  </ul>
+
+  <!-- Tab panes --
+  <div class="tab-content">
+    <div role="tabpanel" class="tab-pane active" id="home">Mockup</div>
+    <div role="tabpanel" class="tab-pane" id="profile">Profile</div>
+    <div role="tabpanel" class="tab-pane" id="messages">Messages</div>
+    <div role="tabpanel" class="tab-pane" id="settings">Settings</div>
+  </div>
+-->
+</div>
+
+
 
 
         <div>
