--- a/client/app/dashboard/newproject/newproject.html
+++ b/client/app/dashboard/newproject/newproject.html
@@ -15,16 +15,35 @@
             A name is required
           </p>
         </div>
-         <div class="form-group" ng-class="{ 'has-success': form.name.$valid && submitted,
+         <div class="row">
+         <div class="form-group col-md-6" ng-class="{ 'has-success': form.name.$valid && submitted,
                                             'has-error': form.name.$invalid && submitted }">
           <label>Date Mockup Is Due:</label>
 
           <input type="date" name="mockupduedate" class="form-control" ng-model="project.mockupduedate"
                  required/>
-          <p class="help-block" ng-show="form.name.$error.required && submitted">
+          <p class="help-block" ng-show="form.mockupduedate.$error.required && submitted">
             A date is required
           </p>
         </div>
+
+              <div class="form-group col-md-6" ng-class="{ 'has-success': form.name.$valid && submitted,
+                                            'has-error': form.name.$invalid && submitted }">
+          <label>Who's Assigned:</label>
+
+                   <select ng-model="userList"  ng-options="user as user.name for user in users" >
+
+          </select>
+
+          <p class="help-block" ng-show="form.mockupduedate.$error.required && submitted">
+            Someone needs to be assigned
+          </p>
+        </div>
+
+
+
+
+             </div>
 
         <div class="form-group" ng-class="{ 'has-success': form.info.$valid && submitted,
                                             'has-error': form.info.$invalid && submitted }">
