--- a/client/index.html
+++ b/client/index.html
@@ -73,6 +73,8 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/dashboard/editproject/editProject.controller.js"></script>
+          <script src="app/dashboard/editproject/editProject.js"></script>
           <script src="app/dashboard/main/dashboard.controller.js"></script>
           <script src="app/dashboard/main/dashboard.js"></script>
           <script src="app/dashboard/newproject/newproject.controller.js"></script>
@@ -87,6 +89,7 @@
           <script src="components/mongoose-error/mongoose-error.directive.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
           <script src="components/project-list/project-list.controller.js"></script>
+          <script src="components/project/project.service.js"></script>
           <script src="components/socket/socket.service.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
