--- a/client/index.html
+++ b/client/index.html
@@ -88,6 +88,7 @@
           <script src="components/mongoose-error/mongoose-error.directive.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
           <script src="components/project-list/project-list.controller.js"></script>
+          <script src="components/project/addTask.js"></script>
           <script src="components/project/project.service.js"></script>
           <script src="components/socket/socket.service.js"></script>
           <!-- endinjector -->
