Working on the upload

--- a/client/app/dashboard/project/project.html
+++ b/client/app/dashboard/project/project.html
@@ -26,6 +26,7 @@
      method    =  "post"
 >
 <input type="file" name="document" />
+ <input type="hidden" value="test" name="folder">
 <input type="submit" value="Upload Document" name="submit">
 </form>
 
