--- a/client/index.html
+++ b/client/index.html
@@ -59,6 +59,7 @@
       <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
       <script src="bower_components/angular-route/angular-route.js"></script>
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
+      <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
       <script src="bower_components/angular-socket-io/socket.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
